# Larrick_multi

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  partial_doe_results.pkl  pyproject.toml  repo_layout.yml  requirements-external.txt  verify_kinematics.py  workflow_ownership.yml
.github/: CODEOWNERS  copilot-instructions.md
.github/concierge_templates/: promotion_issue.md.tmpl  promotion_pr.md.tmpl  task_issue.md.tmpl  task_pr.md.tmpl
.github/workflows/: analysis.yml  cem-orchestration.yml  ci-telemetry.yml  ci.yml  layout.yml  optimization.yml  ownership.yml  reusable-fast.yml  simulation.yml  training.yml
Docs/: deep-research-report 2.md  deep-research-report 3.md  deep-research-report.md  main-development-plan.md  openfoam-cantera-rotary-module-audit.md  thermo-anchor-manifest.md  thermo-symbolic-hardening-runbook.md  tribology-gap-closure-plan.md
Docs/Detailed gasoline surrogate/: ChemDetailed.inp.txt
Docs/items/: README.md  legacy_migration_map.csv
data/cem/: fzg_step_load_map.csv  limit_stress_numbers.csv  micropitting_lambda_perm.csv  route_metadata.csv  scuffing_critical_temperatures.csv  tribology_ehl_coefficients.csv
data/simulation_validation/: chemistry_config.json  chemistry_flame_speed_reduced_chem679_config.json  chemistry_flame_speed_reduced_config.json  chemistry_flame_speed_reference_chem323_config.json  chemistry_flame_speed_reference_chem679_config.json  chemistry_smoke_config.json  closed_cylinder_config.json  flame_speed_authority_decision.json  flame_speed_mechanism_candidates.json  flame_speed_reduced_mechanism_candidates.json  flame_speed_target_audit.json  full_handoff_config.json  gas_combustion_chemistry_fixture_results.json  gas_combustion_closed_cylinder_fixture_results.json  gas_combustion_suite_config.json  gas_combustion_suite_strict_config.json  openfoam_runtime_chemistry_table_chem323.json  openfoam_runtime_chemistry_table_chem679.json  reacting_flow_config.json  spray_config.json
openfoam_custom_solvers/larrakEngineFoam/: larrakEngineFoam.C
openfoam_templates/opposed_piston_rotary_valve_sliding_case/: README.md
openfoam_templates/validation_reacting_iso_octane_case/: README.md  openfoam_metrics.json
openfoam_templates/validation_spray_g_iso_octane_case/: README.md  openfoam_metrics.json
scripts/: check_branch_ownership.py  finish_parallel_task.sh  plan_github_concierge.py  route_current_thread.py  start_parallel_task.sh
src/larrak2/: __init__.py
src/larrak2/adapters/: __init__.py  (+3 more)
tests/ci/: test_agent_docs.py  test_analysis_is_sourced_from_larrak_analysis.py  test_architecture_readiness_runner.py  test_artifact_path_guard.py  test_branch_ownership.py  test_cem_modules.py  test_constraints_sign.py  test_contracts_are_sourced_from_larrak_core.py  test_dataset_registry.py  test_docker_openfoam.py  test_encoding_roundtrip.py  test_engine_calibration.py  test_engine_restart_benchmark.py  test_engine_results.py  test_engine_runtime_mechanism.py  test_engines_are_sourced_from_larrak_engines.py  test_explore_exploit_cli_smoke.py  test_explore_exploit_pipeline.py  test_flame_speed_comparison.py  test_flame_speed_diagnostics.py  test_gas_combustion_truth_suite.py  test_github_concierge_planner.py  test_import_paths_wave1.py  test_life_damage_calibration.py  test_lifetime_scalar_fallback.py  test_material_snapping.py  test_openfoam_authority.py  test_openfoam_chemistry_package.py  test_openfoam_engine_package.py  test_openfoam_field_metrics.py  test_openfoam_runner.py  test_orchestrate_auto_truth_dispatch.py  test_orchestrate_cli_smoke.py  test_orchestrate_manual_truth_plan.py  test_orchestration_adapters_smoke.py  test_phase_resolved.py  test_realworld_surrogates.py  test_refine_pareto_casadi_slice.py  test_restart_regression_analysis.py  test_runtime_chemistry_table.py  (+34 more)
tests/dev/: test_cost_model.py  test_full_evaluation.py  test_holes.py  test_openfoam_pipeline_manual.py
tools/: analyze_partial_results.py  build_llnl_gasoline_yaml.py  build_thermo_anchor_manifest.py  diagnose_llnl_flame_speed.py  inspect_cache.py  inspect_count.py  replace_larrak2_shims.py  train_machining_surrogate.py
tools/picogk_manufact/: Program.cs
(+396 files in other folders)
