[project]
name = "larrak2"
version = "0.1.0"
description = "Multi-objective Pareto optimization for thermo-gear systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pymoo>=0.6",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy-stl>=3.0",
    "torch>=2.0",
    "scikit-learn>=1.0",
    "larrak-core",
    "larrak-engines",
    "larrak-simulation",
    "larrak-optimization",
    "larrak-analysis",
    "larrak-orchestration",
]

[tool.uv.sources]
# Local suite checkouts — single resolution path per package (no conflicting git pins).
larrak-core = { path = "../larrak-core", editable = true }
larrak-engines = { path = "../larrak-engines", editable = true }
larrak-simulation = { path = "../larrak-simulation", editable = true }
larrak-optimization = { path = "../larrak-optimization", editable = true }
larrak-analysis = { path = "../larrak-analysis", editable = true }
larrak-orchestration = { path = "../larrak-orchestration", editable = true }

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1", "mypy>=1.0"]
combustion = ["cantera>=3.0"]
casadi = ["casadi>=3.6"]
deap = ["deap>=1.3"]
orchestration = ["redis>=5.0", "weaviate-client>=4.0"]

[project.scripts]
larrak-run = "larrak2.cli.run:main"
larrak-gen = "larrak2.cli.generate:main"
larrak-train = "larrak2.cli.train:main"
larrak-validate = "larrak2.cli:validate_main"
larrak-validate-sim = "larrak2.cli:validate_simulation_main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = []

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/ci_contract"]
norecursedirs = ["tests/dev"]
python_files = "test_*.py"
